fix /stuff/code/ feed cover sizes on mobile

--- a/src/css/partials/_feed.scss
+++ b/src/css/partials/_feed.scss
@@ -80,6 +80,14 @@ section.post-content {
   margin-left: 1.5rem;
 }
 
+figure.cover {
+  // keep cover pics from growing out of control
+  max-width: 42%;
+  @include media.tablet {
+    max-width: initial;
+  }
+}
+
 // outindent post titles?
 //h1.title {
 //  margin-left: -1.5rem;
